--- a/emphasis.html
+++ b/emphasis.html
@@ -5,7 +5,7 @@
     <title>Emphasis</title>
 
     <body>
-        <h1 style="color:lavender"><a href="cortesnegron.html">Five Haiku Concerning Design</a></h1>
+        <h1 style="color:lavender"><a href="index.html">Five Haiku Concerning Design</a></h1>
 
         <p>Show the emphasis,<br>
         show where I am supposed to<br>
