--- a/form.html
+++ b/form.html
@@ -5,7 +5,7 @@
     <title>Form</title>
 
     <body>
-        <h1 style="color:lavender"><a href="cortesnegron.html">Five Haiku Concerning Design</a></h1>
+        <h1 style="color:lavender"><a href="index.html">Five Haiku Concerning Design</a></h1>
 
         <p>Rigid or fabric,<br>
         there are many sides to you.<br>
