--- a/lines.html
+++ b/lines.html
@@ -5,7 +5,7 @@
     <title>Lines</title>
 
     <body>
-        <h1 style="color:lavender"><a href="cortesnegron.html">Five Haiku Concerning Design</a></h1>
+        <h1 style="color:lavender"><a href="index.html">Five Haiku Concerning Design</a></h1>
 
         <p>Straight here and curved there.<br>
         So thin, I might just fall off,<br>
