--- a/shape.html
+++ b/shape.html
@@ -5,7 +5,7 @@
     <title>Shape</title>
 
     <body>
-        <h1 style="color:lavender"><a href="cortesnegron.html">Five Haiku Concerning Design</a></h1>
+        <h1 style="color:lavender"><a href="index.html">Five Haiku Concerning Design</a></h1>
 
         <p>Encased in 2-D,<br>
         I wonder if I can see<br>
