--- a/value.html
+++ b/value.html
@@ -5,7 +5,7 @@
     <title>Value</title>
 
     <body>
-        <h1 style="color:lavender"><a href="cortesnegron.html">Five Haiku Concerning Design</a></h1>
+        <h1 style="color:lavender"><a href="index.html">Five Haiku Concerning Design</a></h1>
 
         <p>It's so bright in here,<br>
         and there is so, so much blue.<br>
