--- a/form.html
+++ b/form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="cortesnegron.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title>Form</title>
 
