--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <link rel="stylesheet" href="cortesnegron.css">
+        <link rel="stylesheet" href="style.css">
         <meta charset="utf-8"/>  
         <title>Five Haiku Concerning Design</title>
     </head>
